@@ -1,3 +1,9 @@
+2010-09-22  Mike Frysinger  <vapier@gentoo.org>
+
+	* bfin-dis.c (decode_pseudoDEBUG_0): Add space after OUTC.
+	(decode_pseudoOChar_0): New function.
+	(_print_insn_bfin): Remove #if 0 and call new decode_pseudoOChar_0.
+
 2010-09-22  Robin Getz  <robin.getz@analog.com>
 
 	* bfin-dis.c (decode_dsp32shift_0): Decode sub opcodes 2/2 as
